feat: Implement initial service item management with domain model, application service, DTOs, and an in-memory repository, alongside a new terms of use document.